# track_records

./: .gitignore  NCIL2.ipynb  README.md  pyproject.toml  scratch.ipynb  track_records  wsgi.py
alt/: athlete_results.php  index.php  select_athlete.php
src/: queries.sql
src/templates/: index.html  results.html
src/track_records/: __init__.py  cli.py  web.py
src/track_records/data_man/: __init__.py  db_ifc.py  helper.py  query.py  reports.py
src/track_records/db_man/: __init__.py  db_ifc.py
src/track_records/templates/: athlete_records.html  index.html  indv_results_select_athlete.html  select_athlete.html
track_record_lookup/: track_record_lookup.py
web/: index.php
web/includes/: db_connect.php  footer.php  track.php
web/private/: analytics.php
web/results/: all_athlete_records.php  athlete_results.php  conf_records.php  team_records.php  team_year_results.php
web/select/: select_athlete.php
