[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "track_record_lookup"
version = "1.0.0"
authors = [
    {name = "Alan Wade", email = "alan.j.wade@gmail.com"},
]
description = "Reads track database and gives results with on command line or in Flask."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "beautifulsoup4 == 4.12.3",
    "Flask == 3.0.3",
    "selenium == 4.26.1",
    "Werkzeug == 3.1.3",
]

[tool.setuptools.packages.find]
where = ["src"]  # This specifies to look in the src directory

[project.scripts]
trl_cli = "track_records.cli:main"

